...
                    children: [
                      TopBar(
                        showAction: false,
                        actionLabel: _tabController.index == 3
                            ? recurrenceText(
                                context,
                                state.recurrenceRule == null ? '저장' : '검토하기',
                                state.recurrenceRule == null
                                    ? 'Save'
                                    : 'Review',
                              )
                            : null,
                        onNextPageButtonClicked:
...
